--- a/build.gradle
+++ b/build.gradle
@@ -75,3 +75,7 @@ processResources {
         exclude 'mcmod.info'
     }
 }
+
+sourceSets {
+    main { output.resourcesDir = output.classesDir }
+}
