--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "1.2.2-mc1.12"
+version = "1.2.3-mc1.12"
 group = "supermartijn642.entangled" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "entangled"
 
@@ -76,6 +76,6 @@ processResources {
     }
 }
 
-sourceSets {
-    main { output.resourcesDir = output.classesDir }
-}
+//sourceSets {
+//    main { output.resourcesDir = output.classesDir }
+//}
