--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -45,6 +45,13 @@ description='''Entangled gives you the materials needed to bind two blocks toget
 [[dependencies.entangled]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.15,)"
+    versionRange="[1.15,1.16)"
+    ordering="NONE"
+    side="BOTH"
+# Add a dependency on SuperMartijn642's Config Lib
+[[dependencies.entangled]]
+    modId="supermartijn642configlib"
+    mandatory=true
+    versionRange="[1.0.1,)"
     ordering="NONE"
     side="BOTH"
