--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -51,3 +51,10 @@ description='''Entangled gives you the materials needed to bind two blocks toget
     versionRange="[1.16,1.16.2)"
     ordering="NONE"
     side="BOTH"
+# Add a dependency on SuperMartijn642's Config Lib
+[[dependencies.entangled]]
+    modId="supermartijn642configlib"
+    mandatory=true
+    versionRange="[1.0.1,)"
+    ordering="NONE"
+    side="BOTH"
