--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -55,6 +55,13 @@ description='''Entangled gives you the materials needed to bind two blocks toget
 [[dependencies.entangled]]
     modId="supermartijn642configlib"
     mandatory=true
-    versionRange="[1.0.5,)"
+    versionRange="[1.0.6,)"
+    ordering="NONE"
+    side="BOTH"
+# Add a dependency on SuperMartijn642's Config Lib
+[[dependencies.entangled]]
+    modId="supermartijn642corelib"
+    mandatory=true
+    versionRange="[1.0.3,1.1.0)"
     ordering="NONE"
     side="BOTH"
