--- a/build.gradle
+++ b/build.gradle
@@ -75,11 +75,11 @@ repositories {
         name = "Progwml6 maven"
         url = "https://dvs1.progwml6.com/files/maven/"
     }
-    maven {
-        // location of a maven mirror for JEI files, as a fallback
-        name = "ModMaven"
-        url = "https://modmaven.k-4u.nl"
-    }
+//    maven {
+//        // location of a maven mirror for JEI files, as a fallback
+//        name = "ModMaven"
+//        url = "https://modmaven.k-4u.nl"
+//    }
     maven {
         // Hwyla maven
         url = "https://maven.tehnut.info"
@@ -100,5 +100,7 @@ dependencies {
     runtimeOnly fg.deobf("mcp.mobius.waila:Hwyla:1.10.11-B78_1.16.2")
 
     // Config Lib
-    compile fg.deobf("curse.maven:supermartijn642s-config-lib:3176341")
+    compile fg.deobf("curse.maven:supermartijn642s-config-lib:3226128")
+    // Core Lib
+    compile fg.deobf("curse.maven:supermartijn642s-core-lib:3300632")
 }
