Move to Core lib Make Entangled blocks save their target when picked up Highlight the bound block when the entangled binder is held

--- a/build.gradle
+++ b/build.gradle
@@ -100,5 +100,7 @@ dependencies {
     runtimeOnly fg.deobf("mcp.mobius.waila:Hwyla:1.10.8-B72_1.15.2")
 
     // Config Lib
-    compile fg.deobf("curse.maven:supermartijn642s-config-lib:3176341")
+    compile fg.deobf("curse.maven:supermartijn642s-config-lib:3312640")
+    // Core Lib
+    compile fg.deobf("curse.maven:supermartijn642s-core-lib:3300630")
 }
