--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -15,7 +15,7 @@ loaderVersion="[25,)" #mandatory This is typically bumped every Minecraft versio
 modId="entangled" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 version="1.2.12" #mandatory
- # A display name for the mod
+# A display name for the mod
 displayName="Entangled" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
 #updateJSONURL="" #optional
@@ -52,6 +52,13 @@ description='''Entangled gives you the materials needed to bind two blocks toget
 [[dependencies.entangled]]
     modId="supermartijn642configlib"
     mandatory=true
-    versionRange="[1.0.5,)"
+    versionRange="[1.0.6,)"
+    ordering="NONE"
+    side="BOTH"
+# Add a dependency on SuperMartijn642's Core Lib
+[[dependencies.entangled]]
+    modId="supermartijn642corelib"
+    mandatory=true
+    versionRange="[1.0.3,1.1.0)"
     ordering="NONE"
     side="BOTH"
