--- a/build.gradle
+++ b/build.gradle
@@ -80,10 +80,6 @@ repositories {
         name = "ModMaven"
         url = "https://modmaven.k-4u.nl"
     }
-    maven {
-        // Hwyla maven
-        url = "https://maven.tehnut.info"
-    }
 }
 
 dependencies {
@@ -95,9 +91,9 @@ dependencies {
     runtimeOnly fg.deobf("mezz.jei:jei-1.14.4:6.0.0.29")
 
     // Compile against the Hwyla API, but do not include it at runtime
-    compileOnly fg.deobf("mcp.mobius.waila:Hwyla:1.10.6-B67_1.14.4:api")
+    compileOnly fg.deobf("curse.maven:hwyla:2777880")
     // At runtime, use the full Hwyla jar
-    runtimeOnly fg.deobf("mcp.mobius.waila:Hwyla:1.10.6-B67_1.14.4")
+    runtimeOnly fg.deobf("curse.maven:hwyla:2777882")
 
     // Config Lib
     compile fg.deobf("curse.maven:supermartijn642s-config-lib:3312639")
