--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,9 @@ repositories {
         name = "ModMaven"
         url = "https://modmaven.k-4u.nl"
     }
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 dependencies {
@@ -98,5 +101,5 @@ dependencies {
     // Config Lib
     compile fg.deobf("curse.maven:supermartijn642s-config-lib:3312641")
     // Core Lib
-    compile fg.deobf("curse.maven:supermartijn642s-core-lib:3300632")
+    compile fg.deobf("com.supermartijn642.core:supermartijn642corelib:1.0.7-dev-mc1.16.5")//fg.deobf("curse.maven:supermartijn642s-core-lib:3300632")
 }
