--- a/build.gradle
+++ b/build.gradle
@@ -75,11 +75,14 @@ repositories {
         name = "Progwml6 maven"
         url = "https://dvs1.progwml6.com/files/maven/"
     }
-//    maven {
-//        // location of a maven mirror for JEI files, as a fallback
-//        name = "ModMaven"
-//        url = "https://modmaven.k-4u.nl"
-//    }
+    maven {
+        // location of a maven mirror for JEI files, as a fallback
+        name = "ModMaven"
+        url = "https://modmaven.k-4u.nl"
+    }
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 dependencies {
@@ -98,5 +101,5 @@ dependencies {
     // Config Lib
     compile fg.deobf("curse.maven:supermartijn642s-config-lib:3312641")
     // Core Lib
-    compile fg.deobf("curse.maven:supermartijn642s-core-lib:3300632")
+    compile fg.deobf("com.supermartijn642.core:supermartijn642corelib:1.0.7-dev-mc1.16.5")//fg.deobf("curse.maven:supermartijn642s-core-lib:3300632")
 }
