--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,14 @@ buildscript {
         maven { url = 'https://files.minecraftforge.net/maven' }
         jcenter()
         mavenCentral()
-        maven { url = 'https://plugins.gradle.org/m2'}
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
-        classpath group: 'com.wynprice.cursemaven', name: 'CurseMaven', version: '2.1.4'
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
-apply plugin: 'com.wynprice.cursemaven'
 
 version = '1.3.4-mc1.16.5'
 group = 'com.supermartijn642.entangled' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -73,21 +70,21 @@ repositories {
     flatDir {
         dirs 'libs'
     }
+    maven {
+        url "https://www.cursemaven.com"
+    }
 }
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.16.4-35.1.37'
 
-    // Compile against the Hwyla API, but do not include it at runtime
-    compileOnly fg.deobf("curse.maven:hwyla:3033595")
-    // At runtime, use the full Hwyla jar
-    runtimeOnly fg.deobf("curse.maven:hwyla:3033593")
-
     // Config Lib
-    compile fg.deobf("curse.maven:supermartijn642s-config-lib:3312641")
+    compile fg.deobf("curse.maven:supermartijn642s-config-lib-438332:3357667")
     // Core Lib
-    compile fg.deobf("com.supermartijn642.core:supermartijn642corelib:1.0.7-dev-mc1.16.5")//fg.deobf("curse.maven:supermartijn642s-core-lib:3300632")
+    compile fg.deobf("curse.maven:supermartijn642s-core-lib-454372:3357863")
 
-    // Mekanism
-    runtimeOnly fg.deobf("curse.maven:mekanism:3183270")
+    // Hwyla
+    compile fg.deobf("curse.maven:hwyla-253449:3033593")
+    // The One Probe
+    compile fg.deobf("curse.maven:the-one-probe-245211:3319255")
 }
