Move all messages to the action bar Make messages more colorful Add support for The One Probe

--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,14 @@ buildscript {
         maven { url = 'https://files.minecraftforge.net/maven' }
         jcenter()
         mavenCentral()
-        maven { url = 'https://plugins.gradle.org/m2'}
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
-        classpath group: 'com.wynprice.cursemaven', name: 'CurseMaven', version: '2.1.4'
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
-apply plugin: 'com.wynprice.cursemaven'
 
 version = '1.3.4a-mc1.12'
 group = 'com.supermartijn642.entangled' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -55,30 +52,26 @@ minecraft {
 }
 
 repositories {
-    maven {
-        // location of the maven that hosts JEI files
-        name = "Progwml6 maven"
-        url = "https://dvs1.progwml6.com/files/maven/"
+    flatDir {
+        dirs 'libs'
     }
     maven {
-        // location of a maven mirror for JEI files, as a fallback
-        name = "ModMaven"
-        url = "https://modmaven.k-4u.nl"
+        url "https://www.cursemaven.com"
     }
 }
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2855'
 
-    // Compile against the Hwyla API, but do not include it at runtime
-    runtimeOnly fg.deobf("curse.maven:hwyla:2568753")
-    // At runtime, use the full Hwyla jar
-    compileOnly fg.deobf("curse.maven:hwyla:2568751")
-
     // Config Lib
-    compile fg.deobf("curse.maven:supermartijn642s-config-lib:3312638")
+    compile fg.deobf("curse.maven:supermartijn642s-config-lib-438332:3357662")
     // Core Lib
-    compile fg.deobf("curse.maven:supermartijn642s-core-lib:3349593")
+    compile fg.deobf("curse.maven:supermartijn642s-core-lib-454372:3357859")
+
+    // Hwyla
+    compile fg.deobf("curse.maven:hwyla-253449:2568751")
+    // The One Probe
+    compileOnly fg.deobf("curse.maven:the-one-probe-245211:2667280")
 }
 
 sourceSets {
