--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -17,7 +17,7 @@ license="All rights reserved"
 # The modid of the mod
 modId="entangled" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="1.3.5a" #mandatory
+version="1.3.6" #mandatory
 # A display name for the mod
 displayName="Entangled" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
