--- a/build.gradle
+++ b/build.gradle
@@ -4,24 +4,27 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
+apply from: 'https://raw.githubusercontent.com/SizableShrimp/Forge-Class-Remapper/main/classremapper.gradle'
 
-version = '1.3.6-mc1.16.5'
+version = '1.3.6-mc1.17'
 group = 'com.supermartijn642.entangled' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'entangled'
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
+// Mojang ships Java 16 to end users in 1.17+ instead of Java 8 in 1.16 or lower, so your mod should target Java 16.
+java.toolchain.languageVersion = JavaLanguageVersion.of(16)
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 
 minecraft {
-    mappings channel: 'official', version: '1.16.5'
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    mappings channel: 'official', version: '1.17.1'
+
+    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.
 
     runs {
         client {
@@ -77,20 +80,15 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.5-36.2.0'
+    minecraft 'net.minecraftforge:forge:1.17.1-37.0.25'
 
     // Config Lib
-    implementation fg.deobf("curse.maven:supermartijn642s-config-lib-438332:3357667")
+    implementation fg.deobf("curse.maven:supermartijn642s-config-lib-438332:3413424")
     // Core Lib
-    implementation fg.deobf("curse.maven:supermartijn642s-core-lib-454372:3357863")
+    implementation fg.deobf("curse.maven:supermartijn642s-core-lib-454372:3413940")
 
     // Hwyla
-    implementation fg.deobf("curse.maven:hwyla-253449:3033593")
+    compileOnly fg.deobf("curse.maven:hwyla-253449:3033593")
     // The One Probe
-    implementation fg.deobf("curse.maven:the-one-probe-245211:3319255")
-
-    // Block Renderer
-    runtimeOnly fg.deobf("curse.maven:block-renderer-380456:3294692")
-    // Just Enough Items
-    runtimeOnly fg.deobf('curse.maven:jei-238222:3345971')
+    implementation fg.deobf("curse.maven:the-one-probe-245211:3402482")
 }
