--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 
-version = '1.3.8-mc1.15'
+version = '1.3.9-mc1.15'
 group = 'com.supermartijn642.entangled' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'entangled'
 
@@ -80,8 +80,7 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.15.2-31.2.55'
 
     // Core Lib
-//    implementation fg.deobf("curse.maven:supermartijn642s-core-lib-454372:3357861")
-    implementation fg.deobf('com.supermartijn642.core:supermartijn642corelib:1.0.12-dev-mc1.15')
+    implementation fg.deobf("curse.maven:supermartijn642s-core-lib-454372:3524758")
     // Config Lib
     implementation fg.deobf("curse.maven:supermartijn642s-config-lib-438332:3413935")
 
