--- a/build.gradle
+++ b/build.gradle
@@ -14,17 +14,17 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 
-version = '1.3.10-mc1.17'
+version = '1.3.10-mc1.18'
 group = 'com.supermartijn642.entangled' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'entangled'
 
-// Mojang ships Java 16 to end users in 1.17+ instead of Java 8 in 1.16 or lower, so your mod should target Java 16.
-java.toolchain.languageVersion = JavaLanguageVersion.of(16)
+// Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 
 minecraft {
-    mappings channel: 'parchment', version: '2021.10.31-1.17.1'
+    mappings channel: 'official', version: '1.18'
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.
 
@@ -82,15 +82,15 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.17.1-37.0.104'
+    minecraft 'net.minecraftforge:forge:1.18-38.0.4'
 
     // Core Lib
-    implementation fg.deobf("curse.maven:supermartijn642s-core-lib-454372:3524763")
+    implementation fg.deobf("curse.maven:supermartijn642s-core-lib-454372:3543905")
     // Config Lib
-    implementation fg.deobf("curse.maven:supermartijn642s-config-lib-438332:3413940")
+    implementation fg.deobf("curse.maven:supermartijn642s-config-lib-438332:3542143")
 
     // Hwyla
     compileOnly fg.deobf("curse.maven:hwyla-253449:3033593")
     // The One Probe
-    implementation fg.deobf("curse.maven:the-one-probe-245211:3430022")
+    compileOnly fg.deobf("curse.maven:the-one-probe-245211:3430022")
 }
