--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,40 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
+# Gradle settings
 org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
+
+# Minecraft
+minecraft_version=1.12.2
+minecraft_dependency=[1.12,1.13)
+minecraft_suffix=mc1.12
+java_target=8
+java_dependency=>=8
+resource_pack_format=3
+
+# Forge
+forge_version=14.23.5.2860
+mappings_channel=snapshot
+mappings_version=20171003-1.12
+
+# Mixin
+mixin_minimum_version=0.7
+mixin_package=mixin
+mixin_compatibility_level=JAVA_8
+
+# Mod properties
+mod_name=Entangled
+mod_description=Entangled allows you to 'entangle' two blocks together!
+mod_id=entangled
+mod_version=1.3.10
+mod_license=All rights reserved
+mod_page=https://www.curseforge.com/minecraft/mc-mods/entangled
+mod_sources=https://github.com/SuperMartijn642/Entangled
+mod_issues=https://github.com/SuperMartijn642/Entangled/issues
+mod_package=com.supermartijn642.entangled
+mod_main_class=Entangled
+maven_group=com.supermartijn642
+
+# Dependencies
+core_library_file=3751319
+config_library_file=3666797
+hwyla_file=2568751
+the_one_probe_file=2667280
