--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "fabric-loom" version "0.11-SNAPSHOT"
+    id "fabric-loom" version "0.12-SNAPSHOT"
 }
 
 version = project.mod_version + "-fabric-" + project.minecraft_suffix
@@ -33,13 +33,13 @@ dependencies {
 
     // Core library
 //    implementation fg.deobf("curse.maven:supermartijn642s-core-lib-454372:${project.core_library_file}")
-    modImplementation "com.supermartijn642:supermartijn642corelib:1.0.16-fabric-mc1.18"
+    modImplementation "com.supermartijn642:supermartijn642corelib:1.1.0-fabric-mc1.18"
 //    // Config library
 //    implementation fg.deobf("curse.maven:supermartijn642s-config-lib-438332:${project.config_library_file}")
     modImplementation "com.supermartijn642:supermartijn642configlib:1.1.0-fabric-mc1.18"
 
     // Team Reborn Energy API
-    modImplementation("teamreborn:energy:${project.team_reborn_energy_version}") {
+    modCompileOnly("teamreborn:energy:${project.team_reborn_energy_version}") {
         exclude(group: "net.fabricmc.fabric-api")
     }
     // Jade
@@ -56,9 +56,9 @@ processResources {
         expand project.properties
     }
 
-    rename "icon.png", "${project.mod_id}.png"
-    rename "modid.accesswidener", "${project.mod_id}.accesswidener"
-    rename "modid.mixins.json", "${project.mod_id}.mixins.json"
+    rename "^icon.png\$", "${project.mod_id}.png"
+    rename "^modid.accesswidener\$", "${project.mod_id}.accesswidener"
+    rename "^modid.mixins.json\$", "${project.mod_id}.mixins.json"
 }
 
 loom {
