--- a/gradle.properties
+++ b/gradle.properties
@@ -11,9 +11,9 @@ java_dependency=>=17
 resource_pack_format=9
 
 # Fabric
-fabric_loader_version=0.13.3
-fabric_loader_dependency=>=0.13.3
-fabric_api_version=0.57.0+1.18.2
+fabric_loader_version=0.14.8
+fabric_loader_dependency=>=0.14.0
+fabric_api_version=0.58.0+1.18.2
 fabric_api_dependency=*
 
 # Mixin
@@ -21,11 +21,11 @@ mixin_minimum_version=0.8
 mixin_package=mixin
 mixin_compatibility_level=JAVA_17
 
-# Mod Properties
+# Mod properties
 mod_name=Entangled
 mod_description=Entangled gives you the materials needed to bind two blocks together, allowing you to interact with either one as if they were the same block! This will allow you to transfer items, energy, fluids or whatever you want instantly, you can have more than eight sides to work with or you could just hide your messy cables, or whatever you can imagine!
 mod_id=entangled
-mod_version=1.3.10
+mod_version=1.3.11
 mod_license=All rights reserved
 mod_page=https://www.curseforge.com/minecraft/mc-mods/entangled
 mod_sources=https://github.com/SuperMartijn642/Entangled
@@ -37,7 +37,7 @@ maven_group=com.supermartijn642
 
 # Dependencies
 core_library_file=3649270
-core_library_dependency=>=1.0.16 <1.1.0
+core_library_dependency=>=1.1.0 <1.2.0
 config_library_file=3542143
 config_library_dependency=>=1.0.9
 team_reborn_energy_version=2.2.0
