Add generators for all data and assets

--- a/build.gradle
+++ b/build.gradle
@@ -107,11 +107,32 @@ minecraft {
 
             property "forge.logging.markers", "REGISTRIES"
 
-            args "--mod", project.mod_id, "--all", "--output", file("src/generated/resources/"), "--existing", file("src/main/resources/")
+            args "--mod", project.mod_id, "--all", "--output", file("src/generated/resources/"), "--existing", file("$buildDir/data_resources")
 
             mods {
                 source sourceSets.main
             }
         }
     }
+}
+
+task prepareDataResources(type: Sync) {
+    from file("src/main/resources")
+    into "$buildDir/data_resources"
+    inputs.property "version", version
+
+    filesMatching(["META-INF/mods.toml", "modid.mixins.json", "pack.mcmeta"]) {
+        expand project.properties
+    }
+
+    exclude "**/*.pdn"
+
+    rename "^modid.mixins.json\$", "${project.mod_id}.mixins.json"
+    rename "^icon.png\$", "${project.mod_id}.png"
+}
+
+// Run prepareDataResources before prepareRunData
+tasks.whenTaskAdded {
+    if(it.name == "prepareRunData")
+        it.dependsOn "prepareDataResources"
 }
