Improve bound block data loading #55

--- a/build.gradle
+++ b/build.gradle
@@ -68,7 +68,7 @@ processResources {
 minecraft {
     mappings channel: "official", version: project.minecraft_version
 
-    // accessTransformer = file("src/main/resources/META-INF/accesstransformer.cfg")
+    accessTransformer = file("src/main/resources/META-INF/accesstransformer.cfg")
 
     runs {
         client {
