--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import java.util.regex.Pattern
+
 plugins {
     id "fabric-loom" version "1.1-SNAPSHOT"
     id "com.matthewprenger.cursegradle" version "1.4.0"
@@ -55,11 +57,14 @@ sourceSets.main.resources { srcDir "src/generated/resources" }
 processResources {
     inputs.property "version", project.version
 
+    // Replace the mod version
+    Map<String, ?> copyProperties = project.properties.clone() as Map<String, ?>
+    if ((copyProperties.mod_version as String).matches("[^.0-9]")) {
+        int index = Pattern.compile("[^.0-9]").matcher(copyProperties.mod_version as String).start()
+        copyProperties.mod_version = copyProperties.mod_version.substring(0, index) + "+" + copyProperties.mod_version.substring(index)
+    }
+
     filesMatching(["fabric.mod.json", "modid.mixins.json", "pack.mcmeta"]) {
-        Map<String, ?> copyProperties = project.properties.clone() as Map<String, ?>
-        String modVersion = project.properties.mod_version
-        if (Character.isAlphabetic(modVersion.charAt(modVersion.length() - 1) as int))
-            copyProperties.mod_version = modVersion.substring(0, modVersion.length() - 1) + "-" + modVersion.chars[-1]
         expand copyProperties
     }
 
@@ -115,6 +120,7 @@ curseforge {
         releaseType = project.curseforge_release_type
         project.curseforge_game_versions.split(" ").each it::addGameVersion
         addGameVersion("Fabric")
+        addGameVersion("Quilt")
         // Point to 'changelog' setting to a the changelog file
         changelog = file("changelog.md")
         changelogType = "markdown"
@@ -157,7 +163,7 @@ modrinth {
     // Convert the changelog file to text
     changelog = file("changelog.md").text
     uploadFile = remapJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
-    loaders = ["fabric"]
+    loaders = ["fabric", "quilt"]
     if (!project.modrinth_required_dependency_ids.isEmpty() || !project.modrinth_optional_dependency_ids.isEmpty()) {
         dependencies {
             // Required dependencies
