Update to NeoForge

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,1 @@
-public net.minecraft.server.level.ServerChunkCache f_8330_ # mainThread
+public net.minecraft.server.level.ServerChunkCache mainThread
