--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.20.1
-minecraft_dependency=[1.20,1.21)
-minecraft_suffix=mc1.20
+minecraft_version=1.20.4
+minecraft_dependency=[1.20.3,1.21)
+minecraft_suffix=mc1.20.4
 java_target=17
 java_dependency=>=17
-resource_pack_format=15
+resource_pack_format=22
 
 # Forge
-forge_version=47.1.44
-forge_dependency=[46,)
-javafml_dependency=[46,)
+neoforge_version=20.4.43-beta
+neoforge_dependency=[20.3,)
+javafml_dependency=[1,)
 
 # Mixin
 mixin_minimum_version=0.8
@@ -36,22 +36,22 @@ maven_group=com.supermartijn642
 # CurseForge
 curseforge_project_id=301034
 curseforge_release_type=release
-curseforge_game_versions=1.20 1.20.1
+curseforge_game_versions=1.20.3 1.20.4
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=
 
 # Modrinth
 modrinth_project_id=entangled
 modrinth_release_type=release
-modrinth_game_versions=1.20 1.20.1
+modrinth_game_versions=1.20.3 1.20.4
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
 # Dependencies
-core_library_file=4660142
-core_library_dependency=[1.1.12,1.2.0)
-config_library_file=4629797
-config_library_dependency=[1.1.6,)
+core_library_file=4968742
+core_library_dependency=[1.1.0,1.2.0)
+config_library_file=4971552
+config_library_dependency=[1.1.0,)
 jade_file=4538674
 the_one_probe_file=4442439
 
