--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ java_dependency=>=17
 resource_pack_format=22
 
 # NeoForge
-neoforge_version=20.4.43-beta
+neoforge_version=20.4.159-beta
 neoforge_dependency=[20.3,)
 javafml_dependency=[1,)
 
@@ -36,14 +36,14 @@ maven_group=com.supermartijn642
 # CurseForge
 curseforge_project_id=301034
 curseforge_release_type=release
-curseforge_game_versions=1.20.3 1.20.4
+curseforge_game_versions=1.20.4
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=
 
 # Modrinth
 modrinth_project_id=entangled
 modrinth_release_type=release
-modrinth_game_versions=1.20.3 1.20.4
+modrinth_game_versions=1.20.4
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
