--- a/gradle.properties
+++ b/gradle.properties
@@ -54,6 +54,7 @@ config_library_file=4629797
 config_library_dependency=[1.1.6,)
 jade_file=5072729
 the_one_probe_file=4442439
+refined_storage_file=4844585
 
 # Runtime mods
 just_enough_items_file=4536209
