Add Refined Storage to dev

--- a/gradle.properties
+++ b/gradle.properties
@@ -54,6 +54,7 @@ config_library_file=4629789
 config_library_dependency=[1.1.6,)
 hwyla_file=2880069
 the_one_probe_file=3040732
+refined_storage_file=3004050
 
 # Runtime mods
 just_enough_items_file=3272032
