Add Refined Storage to dev

--- a/gradle.properties
+++ b/gradle.properties
@@ -54,6 +54,7 @@ config_library_file=4629792
 config_library_dependency=[1.1.6,)
 jade_file=3865918
 the_one_probe_file=3671753
+refined_storage_file=4902316
 
 # Runtime mods
 just_enough_items_file=3758750
