Disable MixinGradle's annotation processor check

--- a/build.gradle
+++ b/build.gradle
@@ -161,6 +161,11 @@ tasks.configureEach {
         it.dependsOn "prepareDataResources"
 }
 
+// MixinGradle Settings
+mixin {
+    disableAnnotationProcessorCheck()
+}
+
 // Force the jar to be reobfuscated
 jar.finalizedBy('reobfJar')
 
